[gd_scene load_steps=6 format=1]

[ext_resource path="res://scenes/mobs/Goblin/Goblin.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/mobs/Goblin/goblin2_sheet.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 21, 22 )

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( -20, 24, -20, -8, -8, -20, 8, -20, 20, -8, 20, 24 )

[sub_resource type="Animation" id=3]

resource/name = "walk"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Body:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0, 5 ]
}

[node name="Goblin" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 2 )
shapes/0/trigger = false
collision/layers = 0
collision/mask = 2
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Hurtbox" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="HurtShape" type="CollisionPolygon2D" parent="Hurtbox"]

build_mode = 0
polygon = Vector2Array( -20, 24, -20, -8, -8, -20, 8, -20, 20, -8, 20, 24 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="ColShape" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, 2 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="FloorRays" type="Node2D" parent="."]

[node name="Left" type="RayCast2D" parent="FloorRays"]

transform/pos = Vector2( -21, 24 )
enabled = true
cast_to = Vector2( 0, 2 )
layer_mask = 1
type_mask = 1

[node name="Right" type="RayCast2D" parent="FloorRays"]

transform/pos = Vector2( 21, 24 )
enabled = true
cast_to = Vector2( 0, 2 )
layer_mask = 1
type_mask = 1

[node name="Sprite" type="Node2D" parent="."]

[node name="Body" type="Sprite" parent="Sprite"]

texture = ExtResource( 2 )
hframes = 7
frame = 2

[node name="WallRay" type="RayCast2D" parent="Sprite"]

transform/pos = Vector2( 21, 17 )
enabled = true
cast_to = Vector2( 2, 0 )
layer_mask = 1
type_mask = 1

[node name="Animator" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/walk = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "walk"

[connection signal="body_enter" from="Hurtbox" to="." method="_on_Hurtbox_body_enter"]


